[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/player/health/PlayerHealth.gd" type="Script" id=1]
[ext_resource path="res://assets/player/health/player_pain.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/player/health/player_death.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/player/health/player_heart_beat.wav" type="AudioStream" id=4]

[node name="PlayerHealth" type="Node"]

script = ExtResource( 1 )

[node name="player_pain" type="AudioStreamPlayer2D" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="player_death" type="AudioStreamPlayer2D" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="player_heavilyinjured" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="player_neardeath_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="player_invincible_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="finished" from="player_heavilyinjured" to="." method="_on_player_heavilyinjured_finished"]

[connection signal="timeout" from="player_neardeath_timer" to="." method="_on_player_neardeath_timer_timeout"]

[connection signal="timeout" from="player_invincible_timer" to="." method="_on_player_invincible_timer_timeout"]


